<resources>
    <string name="app_name">Watch Reminder</string>
    <string name="two">Two</string>
    <string name="one">one</string>
    <string name="three">Three</string>
    <string name="showPoster">Show Poster</string>
    <string name="showName">Show name</string>
    <string name="episodeName">Episode name</string>
    <string name="releaseYear">rYear</string>
    <string name="spacer">-</string>
    <string name="removeIcon">remove icon</string>
    <string name="endYear">eYear</string>
    <string name="enterShowName">Enter show name</string>
    <string name="loadResults">Load</string>
    <string name="Title">Title:</string>
    <string name="ShowTitle">Show Title:</string>
    <string name="EpisodeTitle">Episode Title:</string>
    <string name="FirstAired">First Aired:</string>
    <string name="FirstAiredDate">First Aired</string>
    <string name="Status">Status:</string>
    <string name="StatusText">Status</string>
    <string name="RemoveAll">REMOVE SEARCH RESULTS</string>
    <string name="AddSelected">ADD SELECTED</string>
    <string name="poster_not_available">Poster not available.</string>
    <string name="AirsDayOfWeek">Airs day of week:</string>
    <string name="AirsTime">Airs time:</string>
    <string name="AirsTimeText">Airs time</string>
    <string name="AirsDayOfWeekText">Day</string>
    <string name="Overview">Overview:</string>
    <string name="OverviewText">Overview</string>
    <string name="RemoveAllFragmentTwo">REMOVE ALL SHOWS</string>
    <string name="RemoveAllFragmentFour">REMOVE ALL EPISODES</string>
    <string name="EpisodeNumber">Episode no:</string>
    <string name="EpisodeNumberText">no</string>
    <string name="SeasonNumber">Season no:</string>
    <string name="SeasonNumberText">no</string>
    <string name="AirsDate">Airs Date</string>
    <string name="AirsDateText">Airs date</string>
    <string name="plus_minus">plus/minu</string>
</resources>
