<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/fragmentOneItemBackgroundColor">


    <ImageView
        android:id="@+id/showImage"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
        android:contentDescription="@string/showPoster"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/posterNotAvailable"
        android:text="@string/poster_not_available"
        android:gravity="center"/>

    <RelativeLayout
        android:id="@+id/infoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showImage"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/Title"
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="35dp"/>

        <TextView
            android:id="@+id/showName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showName"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:maxLines="1"
            android:maxLength="50"
            android:textColor="@color/navigationBarColor"
            android:layout_toEndOf="@+id/title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/aired"
            android:text="@string/FirstAired"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/title"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstAired"
            android:textColor="@color/navigationBarColor"
            android:layout_toEndOf="@+id/aired"
            android:layout_below="@+id/showName"
            android:text="@string/FirstAiredDate"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statusText"
            android:text="@string/Status"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/aired"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="23dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/status"
            android:textColor="@color/navigationBarColor"
            android:layout_toEndOf="@+id/statusText"
            android:layout_below="@+id/firstAired"
            android:text="@string/StatusText"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="5dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectCheckbox"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

</RelativeLayout>